MTSL-226 [Bug fix] - Added new label; Fix input alignment;

--- a/src/lwc/portalCasesList/portalCasesList.css
+++ b/src/lwc/portalCasesList/portalCasesList.css
@@ -2,3 +2,11 @@
     display: inline-block;
     width: 80%;
 }
+
+.inputFilter {
+    display: flex;
+}
+
+.inputFilter lightning-input {
+    width: 100%;
+}
